--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,10 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.1"
+dataBinding {
+    enabled = true
 
+}
     defaultConfig {
         applicationId "id.sch.smktelkom_mlg.learn.advancedwidget3"
         minSdkVersion 21
